RESOLVED FIXED171498
AX: Support time@datetime for verbosity clarification of dates, times, and durations
https://bugs.webkit.org/show_bug.cgi?id=171498
Summary AX: Support time@datetime for verbosity clarification of dates, times, and du...
chris fleizach
Reported 2017-05-01 09:41:36 PDT
Support time@datetime for verbosity clarification of dates, times, and durations * NOTES Looks like the time element covers date, time, and durations. http://www.whatwg.org/specs/web-apps/current-work/multipage/text-level-semantics.html#the-time-element Examples: Duration spoken as "four minutes eighteen seconds" <time datetime="4m 18s">04:18</time> Versus Time spoken as "four eighteen" <time>04:18</time> <!-- implicit --> <time datetime="04:18">04:18</time> <!-- explicit, redundant -->
Attachments
patch (9.47 KB, patch)
2017-05-01 09:43 PDT, chris fleizach
no flags
patch (9.48 KB, patch)
2017-05-01 09:58 PDT, chris fleizach
no flags
patch (9.47 KB, patch)
2017-05-01 10:02 PDT, chris fleizach
buildbot: commit-queue-
Archive of layout-test-results from ews107 for mac-elcapitan-wk2 (1.05 MB, application/zip)
2017-05-01 10:54 PDT, Build Bot
no flags
Archive of layout-test-results from ews114 for mac-elcapitan (1.66 MB, application/zip)
2017-05-01 11:07 PDT, Build Bot
no flags
Archive of layout-test-results from ews102 for mac-elcapitan (765.92 KB, application/zip)
2017-05-01 11:10 PDT, Build Bot
no flags
patch (10.96 KB, patch)
2017-05-01 12:29 PDT, chris fleizach
jdiggs: review+
Additional patch for ATK so tests aren't skipped (1.64 KB, patch)
2017-05-01 13:08 PDT, Joanmarie Diggs
no flags
patch (12.70 KB, patch)
2017-05-01 14:18 PDT, chris fleizach
no flags
chris fleizach
Comment 1 2017-05-01 09:41:51 PDT
chris fleizach
Comment 2 2017-05-01 09:43:38 PDT
chris fleizach
Comment 3 2017-05-01 09:58:16 PDT
Build Bot
Comment 4 2017-05-01 10:01:08 PDT
Attachment 308726 [details] did not pass style-queue: ERROR: Source/WebCore/accessibility/ios/WebAccessibilityObjectWrapperIOS.mm:1287: One line control clauses should not use braces. [whitespace/braces] [4] Total errors found: 1 in 9 files If any of these errors are false positives, please file a bug against check-webkit-style.
chris fleizach
Comment 5 2017-05-01 10:02:37 PDT
Joanmarie Diggs
Comment 6 2017-05-01 10:17:41 PDT
Do you think it would be worthwhile to add cases to the tests which hold all the roles and elements, if they're not already there, namely roles-exposed.html, roles-computedRoleString.html, and in the case of my platform, gtk/xml-roles-exposed.html? Looking at the mappings, I'm going to have to slap some extra object attributes on it. https://w3c.github.io/html-aam/#el-time, so if you could do roles-exposed.html and roles-computedRoleString.html, that would be great. Once your patch lands, I'll do the stuff for my platform. p.s. Your mappings are a blank says the HTML AAM. One of us should file an issue. If you'd like, I'll do that after your patch lands too.
Build Bot
Comment 7 2017-05-01 10:54:10 PDT
Comment on attachment 308727 [details] patch Attachment 308727 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/3651923 New failing tests: accessibility/roles-computedRoleString.html accessibility/roles-exposed.html
Build Bot
Comment 8 2017-05-01 10:54:11 PDT
Created attachment 308732 [details] Archive of layout-test-results from ews107 for mac-elcapitan-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews107 Port: mac-elcapitan-wk2 Platform: Mac OS X 10.11.6
chris fleizach
Comment 9 2017-05-01 10:57:19 PDT
(In reply to Joanmarie Diggs (irc: joanie) from comment #6) > Do you think it would be worthwhile to add cases to the tests which hold all > the roles and elements, if they're not already there, namely > roles-exposed.html, roles-computedRoleString.html, and in the case of my > platform, gtk/xml-roles-exposed.html? > > Looking at the mappings, I'm going to have to slap some extra object > attributes on it. https://w3c.github.io/html-aam/#el-time, so if you could > do roles-exposed.html and roles-computedRoleString.html, that would be > great. Once your patch lands, I'll do the stuff for my platform. > Yes will do. Looks like those tests started failing anyway, so there's probably something there > p.s. Your mappings are a blank says the HTML AAM. One of us should file an > issue. If you'd like, I'll do that after your patch lands too. Great thanks!
Build Bot
Comment 10 2017-05-01 11:07:42 PDT
Comment on attachment 308727 [details] patch Attachment 308727 [details] did not pass mac-debug-ews (mac): Output: http://webkit-queues.webkit.org/results/3651953 New failing tests: accessibility/roles-computedRoleString.html accessibility/roles-exposed.html
Build Bot
Comment 11 2017-05-01 11:07:44 PDT
Created attachment 308733 [details] Archive of layout-test-results from ews114 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews114 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Build Bot
Comment 12 2017-05-01 11:10:12 PDT
Comment on attachment 308727 [details] patch Attachment 308727 [details] did not pass mac-ews (mac): Output: http://webkit-queues.webkit.org/results/3652118 New failing tests: accessibility/roles-computedRoleString.html accessibility/roles-exposed.html
Build Bot
Comment 13 2017-05-01 11:10:13 PDT
Created attachment 308734 [details] Archive of layout-test-results from ews102 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews102 Port: mac-elcapitan Platform: Mac OS X 10.11.6
chris fleizach
Comment 14 2017-05-01 12:29:23 PDT
Joanmarie Diggs
Comment 15 2017-05-01 13:08:48 PDT
Created attachment 308754 [details] Additional patch for ATK so tests aren't skipped Chris, the attached provides the WebKitGtk expectations for your new test, the updated expectations for roles-exposed-expected.html, and maps the new TimeRole to ATK_ROLE_STATIC. If it wouldn't be too much trouble for you to include this with the patch you land, it should keep my platform's gardeners from skipping the tests. (Sometimes they are trigger-happy in the spirit of green bots.)
Joanmarie Diggs
Comment 16 2017-05-01 13:09:53 PDT
Comment on attachment 308747 [details] patch r+ but please see my comment and attachment. If it wouldn't be too much trouble.... I'll do the object attribute thing tomorrow.
chris fleizach
Comment 17 2017-05-01 14:03:11 PDT
(In reply to Joanmarie Diggs (irc: joanie) from comment #15) > Created attachment 308754 [details] > Additional patch for ATK so tests aren't skipped > > Chris, the attached provides the WebKitGtk expectations for your new test, > the updated expectations for roles-exposed-expected.html, and maps the new > TimeRole to ATK_ROLE_STATIC. If it wouldn't be too much trouble for you to > include this with the patch you land, it should keep my platform's gardeners > from skipping the tests. (Sometimes they are trigger-happy in the spirit of > green bots.) Yep will do
chris fleizach
Comment 18 2017-05-01 14:18:12 PDT
Joanmarie Diggs
Comment 19 2017-05-01 14:38:28 PDT
(In reply to chris fleizach from comment #9) > (In reply to Joanmarie Diggs (irc: joanie) from comment #6) > > p.s. Your mappings are a blank says the HTML AAM. One of us should file an > > issue. If you'd like, I'll do that after your patch lands too. > > Great thanks! Issue and pull request to update your platform's mappings: https://github.com/w3c/html-aam/pull/89
WebKit Commit Bot
Comment 20 2017-05-01 15:52:39 PDT
Comment on attachment 308765 [details] patch Clearing flags on attachment: 308765 Committed r216038: <http://trac.webkit.org/changeset/216038>
WebKit Commit Bot
Comment 21 2017-05-01 15:52:41 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.