AX: Support time@datetime for verbosity clarification of dates, times, and durations https://bugs.webkit.org/show_bug.cgi?id=171498 <rdar://problem/12985540>

Reviewed by Joanmarie Diggs.

Source/WebCore:

Expose the datetime attribute value.

Test: accessibility/datetime-attribute.html

* accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::datetimeAttributeValue):
* accessibility/AccessibilityObject.h:
* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::computeAccessibilityIsIgnored):
(WebCore::AccessibilityRenderObject::determineAccessibilityRole):
* accessibility/ios/WebAccessibilityObjectWrapperIOS.mm:
(-[WebAccessibilityObjectWrapper determineIsAccessibilityElement]):
(-[WebAccessibilityObjectWrapper accessibilityDatetimeValue]):
* accessibility/mac/WebAccessibilityObjectWrapperMac.mm:
(-[WebAccessibilityObjectWrapper additionalAccessibilityAttributeNames]):
(createAccessibilityRoleMap):
(-[WebAccessibilityObjectWrapper subrole]):
(-[WebAccessibilityObjectWrapper accessibilityAttributeValue:]):

LayoutTests:

* accessibility/datetime-attribute.html: Added.
* accessibility/roles-computedRoleString-expected.txt:
* platform/gtk/accessibility/datetime-attribute-expected.txt: Added.
* platform/gtk/accessibility/roles-exposed-expected.txt:
* platform/mac/accessibility/datetime-attribute-expected.txt: Added.
* platform/mac/accessibility/roles-computedRoleString-expected.txt:
* platform/mac/accessibility/roles-exposed-expected.txt:


Canonical link: https://commits.webkit.org/188425@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@216038 268f45cc-cd09-0410-ab3c-d52691b4dbfc