Source/WebCore/accessibility/ios/WebAccessibilityObjectWrapperIOS.mm
@@ -935,6 +935,7 @@ static AccessibilityObjectWrapper* AccessibilityUnignoredAncestor(AccessibilityO
         case TableHeaderContainerRole:
         case TermRole:
         case TextGroupRole:
+        case TimeRole:
         case TreeRole:
         case TreeItemRole:
         case TreeGridRole:
@@ -1274,6 +1275,17 @@ static void appendStringToResult(NSMutableString *result, NSString *string)
     if (![self _prepareAccessibilityCall])
         return 0;
     return m_object->blockquoteLevel();
+}
+
+- (NSString *)accessibilityDatetimeValue
+{
+    if (![self _prepareAccessibilityCall])
+        return nil;
+    
+    if (auto parent = AccessibilityObject::matchedParent(*m_object, true, [] (const AccessibilityObject& object) { return object.supportsDatetimeAttribute(); }))
+        return parent->datetimeAttributeValue();
+
+    return nil;
 }
 
 - (NSString *)accessibilityPlaceholderValue
